# merlict_development_kit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TelescopeArrayControl.cpp  ZdAzMount.cpp  amalgamate.py  merlict.i  setup.py
Bindings/: Bindings.cpp  CMakeLists.txt
Core/: DistanceMeter.cpp  Histogram1D.cpp  Intersection.cpp  Intersection.h  Photon.cpp  PhotonAndFrame.cpp  Photons.cpp  RayForPropagation.cpp  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
Corsika/EventIo/: PhotonFactory.cpp  PhotonFactory.h
Corsika/MagicMonteCarloSimulation/: MmcsCorsikaRunHeader.cpp
Main/: ShowPhotons.cpp
PhotonSensor/: Sensor.cpp
PhotonsReader/PhotonsReaderWrapper/: EventIoWrapper.cpp
Scenery/: TrajectoryFactory.cpp
Scenery/Primitive/: SphereCapWithRectangularBound.cpp  Triangle.cpp
Scenery/SegmentedReflector/: Geometry.cpp
Tests/: FresnelRefractionAndReflectionTest.cpp  PlaneIntersectionTest.cpp  SphereIntersectionTest.cpp  Vec2Test.cpp  Vec3Test.cpp
Visual/: FlyingCamera.cpp  SkyDome.cpp  Tracer.cpp
Xml/Factory/: FrameFab.cpp
merlict/: CMakeLists.txt  Photon.cpp  Photon.h  PolygonMesh.cpp  PolygonMesh.h  Ray.cpp  RayForPropagation.cpp  RayForPropagation.h  TriangleMesh.cpp  TriangleMesh.h  merlict.h
merlict/scenery/: SensorMap.cpp  SensorMap.h  stereo_litography.cpp
merlict/tests/: BiConvexLensTest.cpp  CMakeLists.txt  PhotonTest.cpp  PolygonMeshTest.cpp  RayForPropagationTest.cpp  SensorMapTest.cpp  TriangleMeshTest.cpp
merlict/tests/resources/scenery/: .gitignore
merlict_corsika/: corsika.h
merlict_corsika/apps/: eventio_converter.cpp
merlict_corsika/tests/: EventIoPhotonFactoryTest.cpp
merlict_fact/apps/: fact_propagation.cpp
merlict_json/: json.cpp
merlict_json/tests/: JsonTest.cpp
merlict_portal_plenoscope/apps/: plenoscope_calibration.cpp  plenoscope_propagation.cpp  plenoscope_raw_photon_propagation.cpp
merlict_portal_plenoscope/calibration/: CalibrationPhotonResult.h  Config.h  OnlineLixelStatistics.h
merlict_tests/: PrintSizeOfTest.cpp
merlict_tests/apps/: propagate.cpp
merlict_viewer/: FlyingCamera.cpp  FlyingCamera.h
merlict_viewer/apps/: show.cpp  show_photons.cpp
merlict_viewer/camera_operator/: Stereo3D.cpp  Stereo3D.h
merlict_visual/: PortablePixMap.cpp
merlict_visual/apps/: camera_server.cpp
tests/: test_BiConvexLens.py  test_Color.py  test_ColorMap.py  test_Disc.py  test_DistanceMeter.py  test_Frames.py  test_Function.py  test_HomTra3.py  test_Photons.py  test_Ray.py  test_Rot3.py  test_Sphere.py  test_SphericalPrismZ.py  test_Vec2.py  test_Vec3.py  test_propagation_env.py  test_reflections.py
